# todolist

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  README.md  api测试报告.md  build.bat  clear.bat  deploy_todolist.yaml  deploy_todolist.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  run_html.py  setup.py  sonar-project.properties  tasks.json
.scannerwork/: report-task.txt
api文件/: full_openapi.json
docs/: CI&CD.md  api测试报告.md  git使用报告.md  总结报告.md  技术报告（总）.md  接口设计.md  概要设计.md  测试文档.md  详细设计.md  需求分析.md
docs/assets/: habits-apifox-reports.html  tasks-apifox-reports.html
docs/项目周报/: 严晨第二周项目周报.md  李锡浩第二周项目周报.md  杨晓舒第二周项目周报.md  杨晓舒项目周报.md  牛茂润第一周项目周报.md  牛茂润第二周项目周报.md  顾晨昊第一周项目周报.md  顾晨昊第二周项目周报.md
html/: index.html  script.js  style.css  前端试用.html
html/ui/: script.js  前端试用.html
migrations/: env.py
migrations/versions/: debb4b9a903f_add_pomodoros_table.py
reports/: coverage.json
src/: README.md  __init__.py  database.py  main.py  models.py  todo.db  todo.py
src/api/: __init__.py  exceptions.py  stats_api.py  task.py  task_api.py  test_api.py
src/api/api模板文件/: full_openapi.yaml
src/app/: crud.py  db.py  main.py  models.py  schemas.py  services.py  tasks.py
src/app/routers/: habits.py  pomodoro.py  tasks.py
src/core/: main.py  todo.py
src/gui/: __init__.py  change_data.py  content_view.py  get_data.py  main_window.py  services.py  task_item.py  utils.py
src/gui/views/: calendar.py  habitclockin.py  home.py  settings.py  timer.py
src/gui/widgets/: content_bar.py  navigation_bar.py  title_bar.py
src/services/: __init__.py  analytics.py  notification.py
tests/: conftest.py
tests/integration/: test_api_routes.py
tests/unit/: test_api.py  test_crud.py  test_main.py  test_models.py  test_schemas.py  test_services.py
项目周报/: 严晨项目周报.md  李锡浩项目周报.md  杨晓舒项目周报.md  牛茂润项目周报.md  顾晨昊项目周报.md
