[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todolist_app"
version = "1.0.0"
description = "Modern To-Do List application with task management and productivity tools"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "这对吗这不队, email = "1718943644@qq.com"}
]

dependencies = [
    "requests>=2.25.1",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "sqlalchemy>=1.4.0",
    "pydantic>=1.8.0",
    "python-dotenv>=0.19.0"
]

[project.scripts]
todo-list = "run:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["app", "gui"]
include-package-data = true