[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todolist-app"
version = "0.1.1"
description = "ToDoList Application with Backend API and GUI"
readme = "README.md"
authors = [{ name = "这对吗这不队", email = "1718943644@qq.com" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["todo", "productivity", "task-management"]
dependencies = [
    "fastapi>=0.85.0",
    "uvicorn>=0.19.0",
    "sqlalchemy>=1.4.0",
    "pydantic>=1.10.0",
    "alembic>=1.9.0",
    "requests>=2.25.0",
    "tkcalendar>=1.6.1"
]

[project.urls]
Homepage = "https://whucsgitlab.whu.edu.cn/devops/todolist.git"
Documentation = "https://whucsgitlab.whu.edu.cn/devops/todolist/-/pages"

[tool.setuptools]
packages = [
    "src",
    "src.app", 
    "src.app.routers", 
    "src.gui", 
    "src.gui.views", 
    "src.gui.widgets"
]
py-modules = ["run", "run_html"] 


[tool.setuptools.package-data]
"html" = ["*.html", "*.css", "*.js"]
"src.app" = ["todo.db"]
"src.gui" = ["resources/**/*"]
"alembic" = [
    "migrations/*.py", 
    "migrations/versions/*.py", 
    "migrations/script.py.mako"
]

[tool.setuptools.data-files]
"share/todolist/html" = ["html/index.html", "html/style.css", "html/script.js"]
"share/todolist/alembic" = ["alembic.ini"]

[project.scripts]
todolist-tk = "run:main"
todolist-web = "run_html:main"
todolist-backend = "src.app.main:run_backend"
todolist-gui = "src.gui.main_window:show_root"

[tool.setuptools.dynamic]
version = { attr = "src.app.__version__" }

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy"
]